# agentic

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  SKILL.template.md  learnings.md  mkdocs.yml  pyproject.toml  scaffold  todo.md
.github/workflows/: ci.yml  docs.yml
docs/: agents-md.md  examples.md  index.md  philosophy.md  research.md  scaffold.md  skill-md.md  skills-vs-learnings.md  why.md  workflow.md
docs/examples/: index.md  python.md
docs/stylesheets/: extra.css
examples/trustpilot-ai/: SKILL.md
examples/ufarm/: SKILL.md
scaffold/: Cargo.toml
scaffold-rs/: Cargo.toml
scaffold/src/: main.rs
