[project]
name = "agentic"
version = "0.1.0"
description = "Two files. Infinite context. Zero repetition."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Prayson Wilfred Daniel", email = "praysonwilfred@gmail.com" }]
keywords = ["ai", "agents", "llm", "conventions", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Proteusiq/agentic"
Documentation = "https://proteusiq.github.io/agentic"
Repository = "https://github.com/Proteusiq/agentic"
Issues = "https://github.com/Proteusiq/agentic/issues"

[dependency-groups]
docs = [
    "zensical>=0.0.24",
]
