[project]
name = "agentic"
version = "0.2.0"
description = "Stop the markdown hell. One file is all you need."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Prayson Wilfred Daniel", email = "14926709+Proteusiq@users.noreply.github.com" }]
keywords = ["ai", "agents", "llm"]
dependencies = []

[project.urls]
Homepage = "https://github.com/Proteusiq/agentic"
Repository = "https://github.com/Proteusiq/agentic"

[dependency-groups]
docs = ["mkdocs-material>=9.0"]
