[package]
name = "scaffold"
version = "0.1.0"
edition = "2024"
description = "Initialize AGENTS.md and SKILL.md in a repository"
license = "MIT"
repository = "https://github.com/Proteusiq/agentic"
keywords = ["ai", "agents", "scaffold", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "6"

[profile.release]
strip = true
lto = true
codegen-units = 1
